# carrier-owl

./: .env-sample  .gitignore  .travis.yml  README.md  manage.py  pyproject.toml  requirements.txt  tasks.py  zappa_settings.json.enc
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  deploy.yml
carrier_owl/: factories.py  manage.py  settings.py  urls.py  wsgi.py  zappa_settings.json.enc
carrier_owl/carrier_owl/: factories.py  settings.py  urls.py  wsgi.py
carrier_owl/carrier_owl/settings/: __init__.py  base.py  prod.py
carrier_owl/event/: models.py  recurring.py  utils.py
carrier_owl/event/migrations/: 0001_initial.py
carrier_owl/event/tests/: factories.py  test_recurring.py  test_utils.py
carrier_owl/gcalendar/: api.py  tests.py
carrier_owl/settings/: __init__.py  base.py  prod.py
emails/: message.py  recurring.py  send.py
emails/tests/: test_message.py  test_recurring.py  test_send.py
event/: models.py  recurring.py  utils.py
event/migrations/: 0001_initial.py  0002_event_remove_location_and_rename_fields.py  0003_event_require_message.py
event/tests/: factories.py  test_models.py  test_recurring.py  test_utils.py
gcalendar/: api.py  apps.py  tests.py
