[tool.poetry]
name = "carrier-owl"
version = "0.0.1"
description = "An assistant for sending out personalized invitations."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.1"
social-auth-app-django = "^4.0.0"
google-api-python-client = "^1.11.0"
oauth2client = "^4.1"
zappa = "^0.51.0"
django-s3-storage = "^0.13.3"
python-dotenv = "^0.14.0"
django-s3-sqlite = "^0.0.3"
django-configurations = "^2.2"

[tool.poetry.dev-dependencies]
factory-boy = "^3.0.1"
coverage = "^5.2"
black = "^19.10b0"
pyupgrade = "^2.7"
isort = "^5.2.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
