[tool.poetry]
name = "carrier-owl"
version = "0.0.1"
description = "An assistant for sending out personalized invitations."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.2"
social-auth-app-django = "^4.0.0"
google-api-python-client = "^2.12.0"
oauth2client = "^4.1"
zappa = "^0.53.0"
django-s3-storage = "^0.13.4"
python-dotenv = "^0.18.0"
django-s3-sqlite = "^0.0.3"
django-configurations = "^2.2"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.0"
coverage = "^5.5"
opstrich = "^0.6.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
