[tool.poetry]
name = "carrier-owl"
version = "0.0.1"
description = "An assistant for sending out personalized invitations."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~4.0"
social-auth-app-django = "^5.0.0"
google-api-python-client = "^2.36.0"
oauth2client = "^4.1"
zappa = "^0.54.1"
django-s3-storage = "^0.13.6"
python-dotenv = "^0.19.2"
django-s3-sqlite = "^0.0.4"
django-configurations = "^2.3"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"
coverage = "^6.3"
opstrich = "^0.6.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
